# Graphics_Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Project/include/: Camera.hpp  DepthBuffer.hpp  Light.hpp  Material.hpp  Parser.hpp  Rasterize.hpp  Renderer.hpp  Texture.hpp  Triangle.hpp  Zbuffer.hpp  kojuParser.hpp  material.hpp  mtlParser.hpp  objParser.hpp
Project/res/models/: House.mtl  house.mtl
Project/src/: CMakeLists.txt  Camera.cpp  Renderer.cpp  Texture.cpp  Zbuffer.cpp  main.cpp
